--- a/Html/KnockingdoorUF.html
+++ b/Html/KnockingdoorUF.html
@@ -29,11 +29,9 @@
 
     </div>
 
-    <div class="Doors">
-<h1 id="KnockingDoor"> KnockingDoor </h1>
+<h1 id="KnockingDoor"> KnockingDoor </h1><br>
 <h2 id="Opendoor"> Öppnar dörren till framtiden </h2>  
-  </div>
-
+  
     <div>
 
     </div>
