--- a/Html/KnockingdoorUF.html
+++ b/Html/KnockingdoorUF.html
@@ -24,14 +24,16 @@
         <li><a href="Produkten.html">Produkten</a></li>
         <li><a href="Grundare&Agare.html">Grundare & Ägare</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
-        <li><a href="Om.Oss..html">Om Oss</a></li>
       </ul>
 
     </div>
+<div class="slogan">
+<h1 class="KnockingDoor"> KnockingDoor  </h1>
+<br>
+<br>
+  <h2 class="KnockingDoor">Öppnar dörren till framtiden</h2>
+</div>
 
-<h1 id="KnockingDoor"> KnockingDoor </h1><br>
-<h2 id="Opendoor"> Öppnar dörren till framtiden </h2>  
-  
     <div>
 
     </div>
