--- a/Knockingdoor/Html/Bli.saljare.html
+++ b/Knockingdoor/Html/Bli.saljare.html
@@ -25,9 +25,30 @@
         <li><a href="Grundare&Agare.html">Grundare & Ägare</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
       </ul>
-
     </div>
 
+   <div class="earth">
+    <h1 class="water">SKICKA DIREKTMEDDELANDE:</h1>
+
+    
+
+    <div class="fire">
+      <ul>
+        <li>FULLSTÄNDIGT NAMN</li>
+        <li>TELEFONNUMMER</li>
+        <li>MAILADRESS</li>
+      </ul>
+    </div>
+    <br>
+    <h1 class="water">ERSÄTTNING:</h1>
+    
+    <div class="fire">
+      <ul>
+        <li>80 KR / SÅLT PAKET</li>
+        <li>1 000 KR TOTALT VID 12 SÅLDA PAKET</li>
+      </ul>
+    </div>
+</div>
 
   </body>
 </html>
