--- a/Knockingdoor/Html/Grundare&Agare.html
+++ b/Knockingdoor/Html/Grundare&Agare.html
@@ -27,7 +27,10 @@
       </ul>
 
     </div>
-
+    <div class="grundare"> 
+      <p id="Theo"> Varmt välkommen till KnockingDoor UF! Mitt namn är Theodor johansson och jag arbetar peimärt som VD på företget. Jag älskar att arbeta med business development och försäljning i alla dess former. Men när jag inte sitter och arbetar med att utveckla affärer och värksamheter, eller står och pratar försäljning så brukar jag spela tennis och padel! Ett annat intresse jag haft under flera år är faktiskt musik, teater, skådespeleri och retorik. Konsten att förmedla budskap med känslor och ord!        
+      </p>
+   </div>
 
   </body>
 </html>
