--- a/Knockingdoor/Html/Bli.saljare.html
+++ b/Knockingdoor/Html/Bli.saljare.html
@@ -18,6 +18,8 @@
     </a>
     </div>
 
+ 
+
     <div class="nav">
       <ul>
         <li><a href="Bli.saljare.html">Bli Säljare</a></li>
@@ -50,5 +52,10 @@
     </div>
 </div>
 
+   <div class="insta">
+      <a href="https://www.instagram.com/knockingdoor_uf/" target="_blank">
+      <img src="../img/insta.png" alt="logo" />
+    </a>
+    </div>
   </body>
 </html>
