--- a/Knockingdoor/Html/Bli.saljare.html
+++ b/Knockingdoor/Html/Bli.saljare.html
@@ -30,6 +30,9 @@
       </ul>
     </div>
 
+    
+
+
    <div class="earth">
     <h1 class="water">SKICKA DIREKTMEDDELANDE:</h1>
 
@@ -42,7 +45,7 @@
         <li>MAILADRESS</li>
       </ul>
     </div>
-    <br>
+    <br>  
     <h1 class="water">ERSÄTTNING:</h1>
     
     <div class="fire">
@@ -52,7 +55,7 @@
       </ul>
     </div>
 </div>
-
+ <div class="sedel"><img src="../img/sedel.jpg" alt="logo"/></div>
    <div class="insta">
       <a href="https://www.instagram.com/knockingdoor_uf/" target="_blank">
       <img src="../img/insta.png" alt="logo" />
