--- a/Knockingdoor/Html/Bli.saljare.html
+++ b/Knockingdoor/Html/Bli.saljare.html
@@ -56,7 +56,7 @@
     </div>
 </div>
  <div class="sedel"><img src="../img/sedel.jpg" alt="logo"/></div>
-   <div class="insta">
+   <div class="insta2">
       <a href="https://www.instagram.com/knockingdoor_uf/" target="_blank">
       <img src="../img/insta.png" alt="logo" />
     </a>
