--- a/Knockingdoor/Html/KnockingdoorUF.html
+++ b/Knockingdoor/Html/KnockingdoorUF.html
@@ -34,7 +34,7 @@
   <h1 class="KnockingDoor">Öppnar dörren till framtiden</h1>
 </div>
 
-      <div class="insta">
+      <div class="insta3">
       <a href="https://www.instagram.com/knockingdoor_uf/" target="_blank">
       <img src="../img/insta.png" alt="logo" />
     </a>
