--- a/Knockingdoor/Html/Grundare&Agare.html
+++ b/Knockingdoor/Html/Grundare&Agare.html
@@ -29,9 +29,8 @@
     <div class="maincontainer">
 <div class="container">
     <div class="theodor">
-      <a href="KnockingdoorUF.html">
       <img src="../img/Theo.jpeg" alt="theo" />
-    </a>
+
     </div>
     <div class="grundare"> 
       <p id="Theo"> Varmt välkommen till KnockingDoor UF! Mitt namn är Theodor johansson och jag arbetar peimärt som VD på företget. Jag älskar att arbeta med business development och försäljning i alla dess former. Men när jag inte sitter och arbetar med att utveckla affärer och värksamheter, eller står och pratar försäljning så brukar jag spela tennis och padel! Ett annat intresse jag haft under flera år är faktiskt musik, teater, skådespeleri och retorik. Konsten att förmedla budskap med känslor och ord!        
@@ -39,11 +38,7 @@
    </div>
   </div>
   <div class="container2">
- <div class="virre">
-      <a href="KnockingdoorUF.html">
-      <img src="../img/Vincent.jpeg" alt="virren" />
-    </a>
-    </div>
+ <div class="virre"><img src="../img/Vincent.jpeg" alt="virren" /></div>
    <div class="agare"> 
     <p id="Vincent"> Jag heter Vincent Sahlin och mitt huvudansvar i företaget är ekonomi. Vidare har jag även ansvar för inköp, administration och juridik. Jag har alltid varit driven av pengar och logistik. Därför vill jag hjälpa ungdomar med samma drivkraft att kunna förverkliga sina drömmar. Förutom pengar så gillar jaf människoe, tro det eller ej! Mina familje- och kompisrelationer är de viktigaste jag har och prioriterar de över mig själv.
     </p>
