--- a/Knockingdoor/Html/kontakt.html
+++ b/Knockingdoor/Html/kontakt.html
@@ -25,10 +25,26 @@
         <li><a href="Grundare&Agare.html">Grundare & Ägare</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
       </ul>
-
     </div>
-
-    <div class="insta">
+    <div class="mainkontaktkontainer">
+    <div class="kontaktconteiner">
+      <div class="theokontaktbild">
+        <img src="../img/theo2.jpeg" alt="logo" />
+      </div>
+      <div class="kontakt"> 
+        <p id="theosnummer"> Verkställande Direktör <br> <br> +46 70-626 46 56 knockingdoor_uf@gmail.com </p>
+     </div>
+    </div>
+<div class="kontaktconteiner2">
+    <div class="vincentkontaktbild">
+      <img src="../img/vincet2.jpeg" alt="logo" />
+    </div>
+    <div class="kontakt2"> 
+      <p id="vincentsnummer"> Ekonomichef <br> <br> +46 72-749 33 99 knockingdoor_uf@gmail.com </p>
+   </div>
+  </div>
+  </div>
+    <div class="insta4">
       <a href="https://www.instagram.com/knockingdoor_uf/" target="_blank">
       <img src="../img/insta.png" alt="logo" />
     </a>
