--- a/Knockingdoor/Html/Produkten.html
+++ b/Knockingdoor/Html/Produkten.html
@@ -26,6 +26,14 @@
         <li><a href="Grundare&Agare.html">Grundare & Ägare</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
       </ul>
+    </div>
+
+    <div class="mainprodukt">
+<div class="produktkontainer">
+  <div class="mona">
+<img src="../img/mona.jpg" alt="mona">
+</div>
+</div>
 
     </div>
 
