--- a/Knockingdoor/Html/Produkten.html
+++ b/Knockingdoor/Html/Produkten.html
@@ -28,14 +28,51 @@
       </ul>
     </div>
 
-    <div class="mainprodukt">
-<div class="produktkontainer">
-  <div class="mona">
-<img src="../img/mona.jpg" alt="mona">
+<div class="mainprodukt">
+  <div class="produktkontainer">
+    <div class="mona">
+  <img src="../img/mona.jpg" alt="mona">
+  </div>
+  <p class="monalisa">Mona Lisa </p>
+  <br>
+  <div class="monaside"> 
+  <h2 class="monalisa1">Konstnär:</h2>
+  <br>
+  <h2 class="konst">Leonardo da Vinci</h2>
+  <br>
+  <h2 class="monalisa1">Tillkomstår:</h2>
+  <br>
+  <h2 class="konst">1503-1506</h2>
 </div>
-</div>
-
+      <div class="monaclass"> 
+        <p class="produkttext">Porträttet av den förmögne köpmannen Francesco del Giocondos hustru har blivit da Vincis mest berömda målning. Hon är framförallt omtalad för hennes hemlighetsfulla leende. Konstverket har hängt i Louvren, Paris sedan den andra halvan av 1800-talet. Målningen blev däremot bestulen från Louvren år 1911 men återfanns redan efter 2 år. </p>
+     </div>
     </div>
+   <div class="monastrumpa"><img src="../img/monalisa-strumpa.png" alt="Mona strumpa" /></div>
+    </div>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="mainprodukt">
+      <div class="produktkontainer">
+        <div class="mona">
+      <img src="../img/old-guitarist.jpeg" alt="the old guitarist">
+      </div>
+      <p class="monalisa">The Old Guitarist</p>
+      <br>
+      <div class="monaside"> 
+      <h2 class="monalisa1">Konstnär:</h2>
+      <br>
+      <h2 class="konst">Pablo Picasso</h2>
+      <br>
+      <h2 class="monalisa1">Tillkomstår:</h2>
+      <br>
+      <h2 class="konst">1903-1904</h2>
+    </div>
+          <div class="monaclass"> 
+            <p class="produkttext">Konstverket återspeglar en gammal fattig man som böjer sig över sin gitarr medan han spelar på gatorna i Barcelona.<br>Konstverket hänger i Art Insttitute of Chicago som en del av Helen Birch Bartlett Memorial Collection. </p>
+         </div>
+        </div>
+       <div class="guitariststrumpa"><img src="../img/old-guitarist-strumpa.png" alt="Mona strumpa" /></div>
+        </div>
 
     <div class="insta">
       <a href="https://www.instagram.com/knockingdoor_uf/" target="_blank">
