--- a/Knockingdoor/Html/Grundare&Agare.html
+++ b/Knockingdoor/Html/Grundare&Agare.html
@@ -30,7 +30,7 @@
     <div class="maincontainer">
 <div class="container">
     <div class="theodor">
-      <img src="../img/Theo.jpeg" alt="theo" />
+      <img src="../img/theo2.jpeg" alt="theo" />
 
     </div>
     <div class="grundare"> 
