--- a/Knockingdoor/Html/kontakt.html
+++ b/Knockingdoor/Html/kontakt.html
@@ -30,7 +30,7 @@
     <div class="mainkontaktkontainer">
     <div class="kontaktconteiner">
       <div class="theokontaktbild">
-        <img src="../img/theo2.jpeg" alt="logo" />
+        <img src="../img/Theo.jpeg" alt="logo" />
       </div>
       <div class="kontakt"> 
         <p id="theosnummer"> Verkställande Direktör <br> <br> +46 70-626 46 56 knockingdoor_uf@gmail.com </p>
