--- a/Knockingdoor/Html/Produkten.html
+++ b/Knockingdoor/Html/Produkten.html
@@ -40,7 +40,7 @@
   <br>
   <h2 class="konst">Leonardo da Vinci</h2>
   <br>
-  <h2 class="monalisa1">Tillkomstår:</h2>
+  <h2 class="monalisa1">Skapelseår:</h2>
   <br>
   <h2 class="konst">1503-1506</h2>
 </div>
@@ -63,7 +63,7 @@
       <br>
       <h2 class="konst">Pablo Picasso</h2>
       <br>
-      <h2 class="monalisa1">Tillkomstår:</h2>
+      <h2 class="monalisa1">Skapelseår:</h2>
       <br>
       <h2 class="konst">1903-1904</h2>
     </div>
