--- a/Knockingdoor/Html/Produkten.html
+++ b/Knockingdoor/Html/Produkten.html
@@ -40,7 +40,7 @@
   <br>
   <h2 class="konst">Leonardo da Vinci</h2>
   <br>
-  <h2 class="monalisa1">Skapelseår:</h2>
+  <h2 class="monalisa1">Skapad:</h2>
   <br>
   <h2 class="konst">1503-1506</h2>
 </div>
@@ -50,7 +50,7 @@
     </div>
    <div class="monastrumpa"><img src="../img/monalisa-strumpa.png" alt="Mona strumpa" /></div>
     </div>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <div class="mainprodukt">
       <div class="produktkontainer">
         <div class="mona">
@@ -63,12 +63,12 @@
       <br>
       <h2 class="konst">Pablo Picasso</h2>
       <br>
-      <h2 class="monalisa1">Skapelseår:</h2>
+      <h2 class="monalisa1">Skapad:</h2>
       <br>
       <h2 class="konst">1903-1904</h2>
     </div>
           <div class="monaclass"> 
-            <p class="produkttext">Konstverket återspeglar en gammal fattig man som böjer sig över sin gitarr medan han spelar på gatorna i Barcelona.<br>Konstverket hänger i Art Insttitute of Chicago som en del av Helen Birch Bartlett Memorial Collection. </p>
+            <p class="produkttext">Konstverket återspeglar en gammal fattig man som böjer sig över sin gitarr medan han spelar på gatorna i Barcelona.<br><br>Konstverket hänger i Art Insttitute of Chicago som en del av Helen Birch Bartlett Memorial Collection. </p>
          </div>
         </div>
        <div class="guitariststrumpa"><img src="../img/old-guitarist-strumpa.png" alt="Mona strumpa" /></div>
@@ -86,7 +86,7 @@
           <br>
           <h2 class="konst">Edvard Munch</h2>
           <br>
-          <h2 class="monalisa1">Skapelseår:</h2>
+          <h2 class="monalisa1">Skapad:</h2>
           <br>
           <h2 class="konst">1893-1910</h2>
         </div>
@@ -96,7 +96,7 @@
             </div>
            <div class="skrietstrumpa"><img src="../img/skriet-strumpa.png" alt="Mona strumpa" /></div>
             </div>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <br><br><br><br><br><br><br><br><br><br><br><br>
             <div class="mainprodukt">
               <div class="produktkontainer">
                 <div class="mona">
@@ -109,7 +109,7 @@
               <br>
               <h2 class="konst">Vincent Van Gogh</h2>
               <br>
-              <h2 class="monalisa1">Skapelseår:</h2>
+              <h2 class="monalisa1">Skapad:</h2>
               <br>
               <h2 class="konst">Juni 1889</h2>
             </div>
