--- a/Knockingdoor/Html/KnockingdoorUF.html
+++ b/Knockingdoor/Html/KnockingdoorUF.html
@@ -4,40 +4,47 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Accessibility assessment</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300Sonsie+One" rel="stylesheet" type="text/css">
     <link href="../css/slutprojekt.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300Sonsie+One" rel="stylesheet" type="text/css">
 
-
+    <script src="/Users/isakjohansson/Downloads/Knockingdoor media quaris/JS/slutprojekt.js" defer></script>
+    <title>Knocking Door</title>
   </head>
-
   <body>
-  
-    <div class="header">
-      <a href="KnockingdoorUF.html">
-      <img src="../img/logo.png" alt="logo" />
-    </a>
-    </div>
+    <nav class="navbar">
+      <div class="brand-title"><a href="KnockingdoorUF.html">Knocking Door</a></div>
+      <a href="#" class="toggle-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </a>
+      <div class="navbar-links">
+        <ul>
+          <li><a class="nav" href="Bli.saljare.html">Bli Säljare</a></li>
+          <li><a class="nav" href="Produkten.html">Produkten</a></li>
+          <li><a class="nav" href="Grundare&Agare.html">Grundare & Ägare</a></li>
+          <li><a class="nav" href="kontakt.html">Kontakt</a></li>
+        </ul>
+      </div>
+    </nav>
 
-    <div class="nav">
-      <ul>
-        <li><a href="Bli.saljare.html">Bli Säljare</a></li>
-        <li><a href="Produkten.html">Produkten</a></li>
-        <li><a href="Grundare&Agare.html">Grundare & Ägare</a></li>
-        <li><a href="kontakt.html">Kontakt</a></li>
-      </ul>
-
-    </div>
 <div class="slogan">
-<h1 class="KnockingDoor"> KnockingDoor  </h1>
+<h1 class="KnockingDoor17"> KnockingDoor  </h1>
 <br>
-<br>
-  <h1 class="KnockingDoor">Öppnar dörren till framtiden</h1>
+<div class="header">
+  <a href="KnockingdoorUF.html">
+  <img src="../img/logo.png" alt="logo" />
+</a>
 </div>
+<br>
+  <h1 class="KnockingDoor18">Öppnar dörren till framtiden</h1>
+</div>
+
+
 
      
     <div class="idea"> 
-       <p id="info"> "KnockingDoor UF tillhandahåller en stor möjlighet för unga, ambitiösa personer att förverkliga deras drömmar om att komma ut i näringslivet. Genom direktförsäljning av högklassiga konstmotivstrumpor erbjuder vi en konkurrenskraftig provision utan att de själva erfordaras riskerat kapital. Vi vill möta säljarna i deras naturliga omgivning och komplettera deras befintliga kunskaper med diverse avgiftsfria säljkurser."
+       <p id="info"> "KnockingDoor UF tillhandahåller en stor möjlighet för unga, ambitiösa personer att förverkliga deras drömmar om att komma ut i näringslivet. <br><br>Genom direktförsäljning av högklassiga konstmotivstrumpor erbjuder vi en konkurrenskraftig provision utan att de själva erfordaras riskerat kapital. Vi vill möta säljarna i deras naturliga omgivning och komplettera deras befintliga kunskaper med diverse avgiftsfria säljkurser."
        </p>
     </div>
     
