--- a/Knockingdoor/Html/kontakt.html
+++ b/Knockingdoor/Html/kontakt.html
@@ -4,29 +4,31 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Accessibility assessment</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300Sonsie+One" rel="stylesheet" type="text/css">
     <link href="../css/slutprojekt.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300Sonsie+One" rel="stylesheet" type="text/css">
 
-
+    <script src="/Users/isakjohansson/Downloads/Knockingdoor media quaris/JS/slutprojekt.js" defer></script>
+    <title>Knocking Door</title>
   </head>
-
   <body>
+    <nav class="navbar">
+      <div class="brand-title"><a href="KnockingdoorUF.html">Knocking Door</a></div>
+      <a href="#" class="toggle-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </a>
+      <div class="navbar-links">
+        <ul>
+          <li><a class="nav" href="Bli.saljare.html">Bli Säljare</a></li>
+          <li><a class="nav" href="Produkten.html">Produkten</a></li>
+          <li><a class="nav" href="Grundare&Agare.html">Grundare & Ägare</a></li>
+          <li><a class="nav" href="kontakt.html">Kontakt</a></li>
+        </ul>
+      </div>
+    </nav>
 
-    <div class="header">
-      <a href="KnockingdoorUF.html">
-      <img src="../img/logo.png" alt="logo" />
-    </a>
-    </div>
-
-    <div class="nav">
-      <ul>
-        <li><a href="Bli.saljare.html">Bli Säljare</a></li>
-        <li><a href="Produkten.html">Produkten</a></li>
-        <li><a href="Grundare&Agare.html">Grundare & Ägare</a></li>
-        <li><a href="kontakt.html">Kontakt</a></li>
-      </ul>
-    </div>
+  
     <div class="mainkontaktkontainer">
     <div class="kontaktconteiner">
       <div class="theokontaktbild">
