--- a/Knockingdoor/Html/Produkten.html
+++ b/Knockingdoor/Html/Produkten.html
@@ -7,7 +7,7 @@
     <link href="../css/slutprojekt.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300Sonsie+One" rel="stylesheet" type="text/css">
  
-    <script src="/Users/isakjohansson/Downloads/Knockingdoor media quaris/JS/slutprojekt.js" defer></script>
+    <script src="/Users/isakjohansson/Downloads/Knockingdoor/JS/slutprojekt.js" defer></script>
     <title>Knocking Door</title>
   </head>
   <body>
