--- a/Knockingdoor/Html/Grundare&Agare.html
+++ b/Knockingdoor/Html/Grundare&Agare.html
@@ -53,5 +53,15 @@
   <img src="../img/insta.png" alt="logo" />
 </a>
 </div>
+
+<script>
+  const toggleButton = document.getElementsByClassName('toggle-button')[0]
+const navbarLinks = document.getElementsByClassName('navbar-links')[0]
+
+toggleButton.addEventListener('click', () => {
+  navbarLinks.classList.toggle('active')
+})
+</script>
+
   </body>
 </html>
