--- a/Knockingdoor/Html/Produkten.html
+++ b/Knockingdoor/Html/Produkten.html
@@ -124,6 +124,13 @@
       <img src="../img/insta.png" alt="logo" />
     </a>
     </div>
+<script>
+  const toggleButton = document.getElementsByClassName('toggle-button')[0]
+const navbarLinks = document.getElementsByClassName('navbar-links')[0]
 
+toggleButton.addEventListener('click', () => {
+  navbarLinks.classList.toggle('active')
+})
+</script>
   </body>
 </html>
