--- a/Knockingdoor/Html/kontakt.html
+++ b/Knockingdoor/Html/kontakt.html
@@ -53,5 +53,14 @@
     </a>
     </div>
 
+    <script>
+      const toggleButton = document.getElementsByClassName('toggle-button')[0]
+    const navbarLinks = document.getElementsByClassName('navbar-links')[0]
+    
+    toggleButton.addEventListener('click', () => {
+      navbarLinks.classList.toggle('active')
+    })
+    </script>
+
   </body>
 </html>
