--- a/Knockingdoor/Html/Bli.saljare.html
+++ b/Knockingdoor/Html/Bli.saljare.html
@@ -44,7 +44,7 @@
     <div class="fire">
       <ul>
         <li>80 KR / SÅLT PAKET</li>
-        <li>1 000 KR TOTALT VID 12 SÅLDA PAKET</li>
+        <li>1000 KR TOTALT VID 12 SÅLDA PAKET</li>
       </ul>
     </div>
 </div>
