--- a/Knockingdoor/Html/Bli.saljare.html
+++ b/Knockingdoor/Html/Bli.saljare.html
@@ -22,8 +22,15 @@
           <li><a class="nav" href="Produkten.html">Produkten</a></li>
           <li><a class="nav" href="Grundare&Agare.html">Grundare & Ägare</a></li>
           <li><a class="nav" href="kontakt.html">Kontakt</a></li>
+          </ul>
+      </div>
+
+      <div class="navbar17">
+        <ul>
+          <li><a class="nav" href="https://www.instagram.com/knockingdoor_uf/" target="_blank">Till Instagram</a></li>
         </ul>
       </div>
+
     </nav>
 
    <div class="earth">
@@ -63,6 +70,5 @@
       navbarLinks.classList.toggle('active')
     })
     </script>
-
   </body>
 </html>
