--- a/Knockingdoor/Html/Grundare&Agare.html
+++ b/Knockingdoor/Html/Grundare&Agare.html
@@ -22,6 +22,12 @@
           <li><a class="nav" href="Produkten.html">Produkten</a></li>
           <li><a class="nav" href="Grundare&Agare.html">Grundare & Ägare</a></li>
           <li><a class="nav" href="kontakt.html">Kontakt</a></li>
+          </ul>
+      </div>
+
+      <div class="navbar17">
+        <ul>
+          <li><a class="nav" href="https://www.instagram.com/knockingdoor_uf/" target="_blank">Till Instagram</a></li>
         </ul>
       </div>
     </nav>
@@ -59,7 +65,7 @@ const navbarLinks = document.getElementsByClassName('navbar-links')[0]
 toggleButton.addEventListener('click', () => {
   navbarLinks.classList.toggle('active')
 })
-</script>
 
+</script>
   </body>
 </html>
