--- a/Knockingdoor/Html/KnockingdoorUF.html
+++ b/Knockingdoor/Html/KnockingdoorUF.html
@@ -24,6 +24,11 @@
           <li><a class="nav" href="kontakt.html">Kontakt</a></li>
         </ul>
       </div>
+      <div class="navbar17">
+        <ul>
+          <li><a class="nav" href="https://www.instagram.com/knockingdoor_uf/" target="_blank">Till Instagram</a></li>
+        </ul>
+      </div>
     </nav>
 
 <div class="slogan">
@@ -59,7 +64,6 @@
     toggleButton.addEventListener('click', () => {
       navbarLinks.classList.toggle('active')
     })
-    </script>
-
+  </script>
   </body>
 </html>
