--- a/Knockingdoor/Html/Grundare&Agare.html
+++ b/Knockingdoor/Html/Grundare&Agare.html
@@ -47,7 +47,7 @@
   <div class="container2">
  <div class="virre"><img src="../img/Vincent.jpeg" alt="virren" /></div>
    <div class="agare"> 
-    <p id="Vincent"> Jag heter Vincent Sahlin och mitt huvudansvar i företaget är ekonomi. Vidare har jag även ansvar för inköp, administration och juridik. Jag har alltid varit driven av pengar och logistik. Därför vill jag hjälpa ungdomar med samma drivkraft att kunna förverkliga sina drömmar. Förutom pengar så gillar jaf människoe, tro det eller ej! Mina familje- och kompisrelationer är de viktigaste jag har och prioriterar de över mig själv.
+    <p id="Vincent"> Jag heter Vincent Sahlin och mitt huvudansvar i företaget är ekonomi. Vidare har jag även ansvar för inköp, administration och juridik. Jag har alltid varit driven av pengar och logistik. Därför vill jag hjälpa ungdomar med samma drivkraft att kunna förverkliga sina drömmar. Förutom pengar så gillar jag människor, tro det eller ej! Mina familje- och kompisrelationer är de viktigaste jag har och prioriterar de över mig själv.
     </p>
  </div>
 </div>
