--- a/Html/kontakt.html
+++ b/Html/kontakt.html
@@ -35,7 +35,7 @@
     <div class="mainkontaktkontainer">
     <div class="kontaktconteiner">
       <div class="theokontaktbild">
-        <img src="../img/Theo.jpeg" alt="logo" />
+        <img src="../img/Theo.JPEG" alt="logo" />
       </div>
       <div class="kontakt"> 
         <p id="theosnummer"> Verkställande Direktör <br> <br> +46 70-626 46 56 knockingdoor_uf@gmail.com </p>
